--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:ital,wght@0,400;0,500;0,700;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
     
@@ -122,6 +122,32 @@
         </div>
       </div>
     </section>
+    <!-- 
+      Footer 
+    -->
+    <footer id="footer" class="footer-section">
+      <div class="container">
+        <div class="row mb-4">
+          <h3 class="footer-heading">The Happiness Subscription</h3>
+        </div>
+        <div class="row mb-4">
+          <a href="#" title="Get on the waiting list">Get Happier Now</a>
+        </div>
+        <div class="row mb-5">
+          <nav class="nav">
+            <a class="nav-link" title="Start" href="#start">Start</a>
+            <a class="nav-link" title="Features" href="#features">Features</a>
+            <a class="nav-link" title="Testimonials" href="#testimonials">Testimonials</a>
+            <a class="nav-link" title="Pricing" href="#pricing">Pricing</a>
+            <a class="nav-link" title="Imprint" href="./imprint.html">Imprint</a>
+            <a class="nav-link" title="Privacy Policy" href="./privacy-policy.html">Privacy Policy</a>
+          </nav>
+        </div>
+        <div class="row mb-3">
+          <p>&copy; 2021 WHealth UG. All rights reserved.</p>
+        </div>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
