Added pricing section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </p>
           </div>
         </div>
-        <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-3 g-3">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
           <div class="col">
             <div class="feature">
               <img src="assets/images/sun_icon.svg" alt="Sun Icon" class="feature-image" />
@@ -118,6 +118,47 @@
                 Craft beer man bun aliquip green juice vinyl aute blue bottle seitan neutra aesthetic iceland butcher. 
               </p>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- 
+      CTA
+    -->
+    <section id="pricing" class="cta-section">
+      <div class="container signup">
+        <div class="row">
+          <div class="col-lg-6 signup-form">
+            <h4 class="display-4 singup-form-header">Welcome to The Happiness<br /> Subscription</h4>
+            <form>
+              <div class="mb-4">
+                <label class="form-label" for="your-email">Your email<span class="required">*</span></label>
+                <input class="form-control" id="your-email" name="your-email" placeholder="example@mail.com" type="email" />
+              </div>
+              <div class="mb-4">
+                <label class="form-label" for="refer-us">Refer us to your friends (separate by email by commata)</label>
+                <input class="form-control" id="refer-us" name="refer-us" placeholder="your-friend@mail.com, your-other-friend@mail.com" type="text" />
+              </div>
+              <div class="mb-4">
+                <label class="form-label">I’d pay for The Happiness Subscription</label>
+                <div>
+                  <input value="0" type="radio" class="btn-check" name="price" id="optionNo" autocomplete="off">
+                  <label class="btn btn-price-selection" for="optionNo">0</label>
+                  <input value="10" type="radio" class="btn-check" name="price" id="optionFive" autocomplete="off">
+                  <label class="btn btn-price-selection" for="optionFive">10</label>
+                  <input value="+10" type="radio" class="btn-check" name="price" id="optionTen" autocomplete="off">
+                  <label class="btn btn-price-selection" for="optionTen">More Than 10</label>
+                </div>
+              </div>
+              <div class="mb-4">
+                <button type="submit" class="btn btn-submit">Join the waitlist</button>
+              </div>
+            </form>
+          </div>
+          <div class="col-lg-6 cta">
+            <h1 class="mb-4">Get<br /> Happier.</h1>
+            <h4 class="display-4 mb-4">Join our waiting list and teyll your friends about us!</h4>
+            <p>Craft beer man bun aliquip green juice vinyl aute blue bottle seitan neutra aesthetic iceland butcher. </p>
           </div>
         </div>
       </div>
