--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="row">
           <div class="col-md-6">
             <h1>Improve Your Happiness. <br /> One Step At The Time</h1>
-            <a class="btn btn-arrow hero-cta" href="#" title="Get Happier">Get Happier Now</a>
+            <a class="btn btn-arrow hero-cta" href="#cta" title="Get Happier">Get Happier Now</a>
           </div>
           <div class="col-md-6 product-image text-center mb-5">
             <img src="assets/images/iphone_13.png" alt="iPhone 13" class="iphone-img" />
@@ -129,7 +129,7 @@
       <div class="container signup">
         <div class="row">
           <div class="col-lg-6 signup-form">
-            <h4 class="display-4 singup-form-header">Welcome to The Happiness<br /> Subscription</h4>
+            <h4 id="cta" class="display-4 singup-form-header">Welcome to The Happiness<br /> Subscription</h4>
             <form>
               <div class="mb-4">
                 <label class="form-label" for="your-email">Your email<span class="required">*</span></label>
