--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a class="nav-link" aria-current="page" href="#">About</a>
               <a class="nav-link" href="#">Features</a>
               <a class="nav-link" href="#">Testimonials</a>
-              <a class="nav-link">Pricing</a>
+              <a class="nav-link" href="#cta" title="Join the">Join the Waitlist</a>
               <a class="nav-link">Team</a>
             </div>
           </div>
