responsive changes on call to action

--- a/index.html
+++ b/index.html
@@ -125,15 +125,20 @@
     <!-- 
       CTA
     -->
-    <section id="pricing" class="cta-section">
+    <section id="waitlist" class="cta-section">
       <div class="container signup">
         <div class="row">
+          <div class="col-lg-6 cta order-lg-2">
+            <h1 class="mb-4">Get<br /> Happier.</h1>
+            <h4 class="display-4 mb-4">Join our waiting list and teyll your friends about us!</h4>
+            <p>Craft beer man bun aliquip green juice vinyl aute blue bottle seitan neutra aesthetic iceland butcher. </p>
+          </div>
           <div class="col-lg-6 signup-form">
             <h4 id="cta" class="display-4 singup-form-header">Welcome to The Happiness<br /> Subscription</h4>
             <form>
               <div class="mb-4">
                 <label class="form-label" for="your-email">Your email<span class="required">*</span></label>
-                <input class="form-control" id="your-email" name="your-email" placeholder="example@mail.com" type="email" />
+                <input class="form-control" id="your-email" name="your-email" placeholder="example@mail.com" type="email" required="required" />
               </div>
               <div class="mb-4">
                 <label class="form-label" for="refer-us">Refer us to your friends (separate by email by commata)</label>
@@ -155,11 +160,6 @@
               </div>
             </form>
           </div>
-          <div class="col-lg-6 cta">
-            <h1 class="mb-4">Get<br /> Happier.</h1>
-            <h4 class="display-4 mb-4">Join our waiting list and teyll your friends about us!</h4>
-            <p>Craft beer man bun aliquip green juice vinyl aute blue bottle seitan neutra aesthetic iceland butcher. </p>
-          </div>
         </div>
       </div>
     </section>
@@ -179,7 +179,7 @@
             <a class="nav-link" title="Start" href="#start">Start</a>
             <a class="nav-link" title="Features" href="#features">Features</a>
             <a class="nav-link" title="Testimonials" href="#testimonials">Testimonials</a>
-            <a class="nav-link" title="Pricing" href="#pricing">Pricing</a>
+            <a class="nav-link" title="Pricing" href="#cta">Join the Waitlist</a>
             <a class="nav-link" title="Imprint" href="./imprint.html">Imprint</a>
             <a class="nav-link" title="Privacy Policy" href="./privacy-policy.html">Privacy Policy</a>
           </nav>
