--- a/index.html
+++ b/index.html
@@ -17,17 +17,14 @@
     -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white menu">
         <div class="container">
-          <a class="navbar-brand" href="#">The Happiness Subscription</a>
+          <a class="navbar-brand" href="#home">The Happiness Subscription</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" aria-current="page" href="#">About</a>
-              <a class="nav-link" href="#">Features</a>
-              <a class="nav-link" href="#">Testimonials</a>
+              <a class="nav-link" href="#features">Features</a>
               <a class="nav-link" href="#cta" title="Join the">Join the Waitlist</a>
-              <a class="nav-link">Team</a>
             </div>
           </div>
         </div>
@@ -176,9 +173,8 @@
         </div>
         <div class="row mb-5">
           <nav class="nav">
-            <a class="nav-link" title="Start" href="#start">Start</a>
+            <a class="nav-link" title="Start" href="#home">Start</a>
             <a class="nav-link" title="Features" href="#features">Features</a>
-            <a class="nav-link" title="Testimonials" href="#testimonials">Testimonials</a>
             <a class="nav-link" title="Pricing" href="#cta">Join the Waitlist</a>
             <a class="nav-link" title="Imprint" href="./imprint.html">Imprint</a>
             <a class="nav-link" title="Privacy Policy" href="./privacy-policy.html">Privacy Policy</a>
