--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <h3 class="footer-heading">The Happiness Subscription</h3>
         </div>
         <div class="row mb-4">
-          <a href="#" title="Get on the waiting list">Get Happier Now</a>
+          <a href="./index.html#cta" title="Get on the waiting list">Get Happier Now</a>
         </div>
         <div class="row mb-5">
           <nav class="nav">
