--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h1>Improve Your Happiness. <br /> One Step At The Time</h1>
+            <h1>Improve Your Happiness. <br /> One Spending At A Time.</h1>
             <a class="btn btn-arrow hero-cta" href="#cta" title="Get Happier">Get Happier Now</a>
           </div>
           <div class="col-md-6 product-image text-center mb-5">
@@ -127,8 +127,8 @@
         <div class="row">
           <div class="col-lg-6 cta order-lg-2">
             <h1 class="mb-4">Get<br /> Happier.</h1>
-            <h4 class="display-4 mb-4">Join our waiting list and teyll your friends about us!</h4>
-            <p>Craft beer man bun aliquip green juice vinyl aute blue bottle seitan neutra aesthetic iceland butcher. </p>
+            <h4 class="display-4 mb-4">Get your exclusive invitation to our community and tell your friends about us!</h4>
+            <p>Data privacy is very important to us. Your data will not be shared for any other purpose than your interest in our app.</p>
           </div>
           <div class="col-lg-6 signup-form">
             <h4 id="cta" class="display-4 singup-form-header">Welcome to The Happiness<br /> Subscription</h4>
@@ -138,7 +138,7 @@
                 <input class="form-control" id="your-email" name="your-email" placeholder="example@mail.com" type="email" required="required" />
               </div>
               <div class="mb-4">
-                <label class="form-label" for="refer-us">Refer us to your friends (separate by email by commata)</label>
+                <label class="form-label" for="refer-us">Refer us to your friends (separate email by comma)</label>
                 <input class="form-control" id="refer-us" name="refer-us" placeholder="your-friend@mail.com, your-other-friend@mail.com" type="text" />
               </div>
               <div class="mb-4">
@@ -146,16 +146,51 @@
                 <div>
                   <input value="0" type="radio" class="btn-check" name="price" id="optionNo" autocomplete="off">
                   <label class="btn btn-price-selection" for="optionNo">0</label>
-                  <input value="10" type="radio" class="btn-check" name="price" id="optionFive" autocomplete="off">
-                  <label class="btn btn-price-selection" for="optionFive">10</label>
-                  <input value="+10" type="radio" class="btn-check" name="price" id="optionTen" autocomplete="off">
-                  <label class="btn btn-price-selection" for="optionTen">More Than 10</label>
+                  <input value="5" type="radio" class="btn-check" name="price" id="optionFive" autocomplete="off">
+                  <label class="btn btn-price-selection" for="optionFive">5</label>
+                  <input value="10" type="radio" class="btn-check" name="price" id="optionTen" autocomplete="off">
+                  <label class="btn btn-price-selection" for="optionTen">10</label>
+                  <input value="+10" type="radio" class="btn-check" name="price" id="optionMore" autocomplete="off">
+                  <label class="btn btn-price-selection" for="optionMore">More Than 10</label>
                 </div>
               </div>
               <div class="mb-4">
-                <button type="submit" class="btn btn-submit">Join the waitlist</button>
+                <button type="submit" class="btn btn-submit">Get an Invite</button>
               </div>
             </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--
+      Testimonials
+    -->
+    <section id="testimonials" class="testimonials-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h2 class="header-testimonials">What Our <br /> Customers Say</h2>
+            <p class="lead-1 lead-testimonials">Get inspired by these stories</p>
+            <div class="testimonial testimonial-1">
+              <p class="testimonial-text">
+                I love their personalised well-being recommendations based on my lifestyle and spending habits. I will continue to subscribe to happiness, and you should too!
+              </p>
+              <p class="testimonial-customer">Linda K., Vienna</p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="testimonial testimonial-2">
+              <p class="testimonial-text">
+                The Happiness Subscription has made my financial spending so much fun. It gives me great insights into how some of my spending is not good for my happiness. I highly recommend it!
+              </p>
+              <p class="testimonial-customer">Jan O., Berlin</p>
+            </div>
+            <div class="testimonial testimonial-3">
+              <p class="testimonial-text">
+                I have tried several apps to help me with my financial spending habits. However, THS is the first app that merges financial spending with happiness. You have the best of both worlds!
+              </p>
+              <p class="testimonial-customer">Pierre G., Paris</p>
+            </div>
           </div>
         </div>
       </div>
