added testimonials to navigation

--- a/imprint.html
+++ b/imprint.html
@@ -24,7 +24,8 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link" href="./index.html#features">Features</a>
-              <a class="nav-link" href="./index.html#cta" title="Join the">Join the Waitlist</a>
+              <a class="nav-link" href="./index.html#cta" title="Get Invited">Get Invited</a>
+              <a class="nav-link" href="./index.html#testimonials" title="Testimonials">Testimonials</a>
             </div>
           </div>
         </div>
@@ -73,7 +74,8 @@
           <nav class="nav">
             <a class="nav-link" title="Start" href="./index.html#home">Start</a>
             <a class="nav-link" title="Features" href="./index.html#features">Features</a>
-            <a class="nav-link" title="Pricing" href="./index.html#cta">Join the Waitlist</a>
+            <a class="nav-link" title="Get Invited" href="./index.html#cta">Get Invited</a>
+            <a class="nav-link" title="Testimonials" href="./index.html#testimonials">Testimonials</a>
             <a class="nav-link" title="Imprint" href="#">Imprint</a>
             <a class="nav-link" title="Privacy Policy" href="./privacy-policy.html">Privacy Policy</a>
           </nav>
