--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link" href="#features">Features</a>
-              <a class="nav-link" href="#cta" title="Join the">Join the Waitlist</a>
+              <a class="nav-link" href="#cta" title="Get Invited">Get Invited</a>
+              <a class="nav-link" href="#testimonials" title="Testimonials">Testimonials</a>
             </div>
           </div>
         </div>
@@ -210,7 +211,8 @@
           <nav class="nav">
             <a class="nav-link" title="Start" href="#home">Start</a>
             <a class="nav-link" title="Features" href="#features">Features</a>
-            <a class="nav-link" title="Pricing" href="#cta">Join the Waitlist</a>
+            <a class="nav-link" title="Get Invited" href="#cta">Get Invited</a>
+            <a class="nav-link" title="Testimonials" href="#testimonials">Testimonials</a>
             <a class="nav-link" title="Imprint" href="./imprint.html">Imprint</a>
             <a class="nav-link" title="Privacy Policy" href="./privacy-policy.html">Privacy Policy</a>
           </nav>
