--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -25,6 +25,7 @@
             <div class="navbar-nav">
               <a class="nav-link" href="./index.html#features">Features</a>
               <a class="nav-link" href="./index.html#cta" title="Join the">Join the Waitlist</a>
+              <a class="nav-link" href="./index.html#testimonials" title="Testimonials">Testimonials</a>
             </div>
           </div>
         </div>
@@ -87,7 +88,8 @@
           <nav class="nav">
             <a class="nav-link" title="Start" href="./index.html#home">Start</a>
             <a class="nav-link" title="Features" href="./index.html#features">Features</a>
-            <a class="nav-link" title="Pricing" href="./index.html#cta">Join the Waitlist</a>
+            <a class="nav-link" title="Get Invited" href="./index.html#cta">Get Invited</a>
+            <a class="nav-link" title="Testimonials" href="./index.html#testimonials">Testimonials</a>
             <a class="nav-link" title="Imprint" href="./imprint.html">Imprint</a>
             <a class="nav-link" title="Privacy Policy" href="#">Privacy Policy</a>
           </nav>
