finished feature copy text, changed feature title

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="#features">Features</a>
+              <a class="nav-link" href="#features">What is it About?</a>
               <a class="nav-link" href="#cta" title="Get Invited">Get Invited</a>
               <a class="nav-link" href="#testimonials" title="Testimonials">Testimonials</a>
             </div>
@@ -56,64 +56,37 @@
         <div class="row feature-heading">
           <div class="col-md-3"></div>
           <div class="col-md-6 text-center">
-          <h2>Personalized Features</h2>
+          <h2>What is it About?</h2>
           <p class="lead-1">
-            I'm baby small batch before they sold out sriracha, meditation PBR&B chia farm-to-table bitters sustainable fanny pack live-edge shaman gluten-free freegan.
+            The Happiness Subscription uses your financial data to help you become happier. Learn about yourself, your spendings and what it means to run a happy financial life.
           </p>
           </div>
         </div>
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
+        <div class="row row-cols-1 row-cols-lg-3 g-3">
           <div class="col">
             <div class="feature">
-              <img src="assets/images/sun_icon.svg" alt="Sun Icon" class="feature-image" />
+              <span class="feature-icon">📈</span>
               <h4 class="display-4">Happiness Score</h4>
               <p>
-                Craft beer man bun aliquip green juice vinyl aute blue bottle seitan neutra aesthetic iceland butcher. 
+                Based on your spending behaviour, you can gain a science-based score on how happy you are. Grasp the statistics behind it. No manual input is needed.
               </p>
             </div>
           </div>
           <div class="col">
             <div class="feature">
-              <img src="assets/images/sun_icon.svg" alt="Sun Icon" class="feature-image" />
-              <h4 class="display-4">Happiness Score</h4>
+              <span class="feature-icon">💰</span>
+              <h4 class="display-4">Financial Happiness</h4>
               <p>
-                Craft beer man bun aliquip green juice vinyl aute blue bottle seitan neutra aesthetic iceland butcher. 
+                Receive personalised financial recommendations to improve your happiness, no matter how happy you already are! Grow your score by committing to them.
               </p>
             </div>
           </div>
           <div class="col">
             <div class="feature">
-              <img src="assets/images/sun_icon.svg" alt="Sun Icon" class="feature-image" />
-              <h4 class="display-4">Happiness Score</h4>
+              <span class="feature-icon">🧑‍🎓</span>
+              <h4 class="display-4">Understand Happiness</h4>
               <p>
-                Craft beer man bun aliquip green juice vinyl aute blue bottle seitan neutra aesthetic iceland butcher. 
-              </p>
-            </div>
-          </div>
-          <div class="col">
-            <div class="feature">
-              <img src="assets/images/sun_icon.svg" alt="Sun Icon" class="feature-image" />
-              <h4 class="display-4">Happiness Score</h4>
-              <p>
-                Craft beer man bun aliquip green juice vinyl aute blue bottle seitan neutra aesthetic iceland butcher. 
-              </p>
-            </div>
-          </div>
-          <div class="col">
-            <div class="feature">
-              <img src="assets/images/sun_icon.svg" alt="Sun Icon" class="feature-image" />
-              <h4 class="display-4">Happiness Score</h4>
-              <p>
-                Craft beer man bun aliquip green juice vinyl aute blue bottle seitan neutra aesthetic iceland butcher. 
-              </p>
-            </div>
-          </div>
-          <div class="col">
-            <div class="feature">
-              <img src="assets/images/sun_icon.svg" alt="Sun Icon" class="feature-image" />
-              <h4 class="display-4">Happiness Score</h4>
-              <p>
-                Craft beer man bun aliquip green juice vinyl aute blue bottle seitan neutra aesthetic iceland butcher. 
+                Become a happiness expert by completing our state-of-the-art happiness course! Join our community and learn about what happiness is! 
               </p>
             </div>
           </div>
@@ -156,7 +129,7 @@
                 </div>
               </div>
               <div class="mb-4">
-                <button type="submit" class="btn btn-submit">Get an Invite</button>
+                <button type="submit" class="btn btn-submit">Get an Invite!</button>
               </div>
             </form>
           </div>
@@ -210,7 +183,7 @@
         <div class="row mb-5">
           <nav class="nav">
             <a class="nav-link" title="Start" href="#home">Start</a>
-            <a class="nav-link" title="Features" href="#features">Features</a>
+            <a class="nav-link" title="Features" href="#features">What is it About?</a>
             <a class="nav-link" title="Get Invited" href="#cta">Get Invited</a>
             <a class="nav-link" title="Testimonials" href="#testimonials">Testimonials</a>
             <a class="nav-link" title="Imprint" href="./imprint.html">Imprint</a>
