--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -23,9 +23,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="./index.html#features">Features</a>
-              <a class="nav-link" href="./index.html#cta" title="Join the">Join the Waitlist</a>
-              <a class="nav-link" href="./index.html#testimonials" title="Testimonials">Testimonials</a>
+              <a class="nav-link" title="What is it About?" href="./index.html#features">What is it About?</a>
+              <a class="nav-link" title="Join the Waitlist" href="./index.html#cta" title="Join the">Join the Waitlist</a>
+              <a class="nav-link" title="Testimonials" href="./index.html#testimonials" title="Testimonials">Testimonials</a>
             </div>
           </div>
         </div>
@@ -87,7 +87,7 @@
         <div class="row mb-5">
           <nav class="nav">
             <a class="nav-link" title="Start" href="./index.html#home">Start</a>
-            <a class="nav-link" title="Features" href="./index.html#features">Features</a>
+            <a class="nav-link" title="What is it About?" href="./index.html#features">What is it About?</a>
             <a class="nav-link" title="Get Invited" href="./index.html#cta">Get Invited</a>
             <a class="nav-link" title="Testimonials" href="./index.html#testimonials">Testimonials</a>
             <a class="nav-link" title="Imprint" href="./imprint.html">Imprint</a>
