inserted app picture

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a class="btn btn-arrow hero-cta" href="#cta" title="Get Happier">Get Happier Now</a>
           </div>
           <div class="col-md-6 product-image text-center mb-5">
-            <img src="assets/images/iphone_13.png" alt="iPhone 13" class="iphone-img" />
+            <img src="assets/images/happiness_subscription_preview.png" alt="The Happiness Subscription App Screen" class="app-img" />
           </div>
         </div>
       </div>
