non payment required info added

--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
                 <input class="form-control" id="refer-us" name="refer-us" placeholder="your-friend@mail.com, your-other-friend@mail.com" type="text" />
               </div>
               <div class="mb-4">
-                <label class="form-label">I’d pay for The Happiness Subscription</label>
+                <label class="form-label">I’d pay for The Happiness Subscription*</label>
+                <p><small>*No obligation to pay (for research purposes only)</small></p>
                 <div>
                   <input value="0" type="radio" class="btn-check" name="price" id="optionNo" autocomplete="off">
                   <label class="btn btn-price-selection" for="optionNo">0</label>
