Move happiness subscription name to one line. Dont use THS abbreviation in website

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
             <p>Data privacy is very important to us. Your data will not be shared for any other purpose than your interest in our app.</p>
           </div>
           <div class="col-lg-6 signup-form">
-            <h4 id="cta" class="display-4 singup-form-header">Welcome to The Happiness<br /> Subscription</h4>
-            <form>
+            <h4 id="cta" class="display-4 singup-form-header">Welcome to The Happiness Subscription</h4>
+            <form action="https://ylk4f3zecb.execute-api.eu-central-1.amazonaws.com/Prod" method="get">
               <div class="mb-4">
                 <label class="form-label" for="your-email">Your email<span class="required">*</span></label>
                 <input class="form-control" id="your-email" name="your-email" placeholder="example@mail.com" type="email" required="required" />
@@ -162,7 +162,7 @@
             </div>
             <div class="testimonial testimonial-3">
               <p class="testimonial-text">
-                I have tried several apps to help me with my financial spending habits. However, THS is the first app that merges financial spending with happiness. You have the best of both worlds!
+                I have tried several apps to help me with my financial spending habits. However, The Happiness Subscription is the first app that merges financial spending with happiness. You have the best of both worlds!
               </p>
               <p class="testimonial-customer">Pierre G., Paris</p>
             </div>
